# mcp_docs_server

./: .clinerules  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  server.py
data/: clients.md  examples.md  faqs.md  introduction.md  quickstart.md  structure.json  structure_with_summaries.json
data/concepts/: core-architecture.md  tools.md
data/development/: contributing.md  roadmap.md  updates.md
data/docs/concepts/: architecture.md  prompts.md  resources.md  roots.md  sampling.md  tools.md  transports.md
data/docs/tools/: debugging.md  inspector.md
data/quickstart/: client.md  server.md  user.md
data/tutorials/: building-mcp-with-llms.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: scrape_content.py  scrape_structure.py
