[project]
name = "mcp-docs-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6", # Added for HTML to Markdown conversion
]
